git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1867 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.wrapper/pom.xml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.wrapper/pom.xml
@@ -68,7 +68,7 @@
             <plugin>
                 <groupId>org.sonatype.flexmojos</groupId>
                 <artifactId>flexmojos-maven-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>3.2.0</version><!--$NO-MVN-MAN-VER$-->
                 <executions>
                     <execution>
                         <goals>
