IN PROGRESS - issue CORE-2: Default configuration cannot be access in non OSGi environments https://openwms.atlassian.net/browse/CORE-2 OPEN - issue OPENWMS-3: Upgrade Spring Framework 3.1 Released version https://openwms.atlassian.net/browse/OPENWMS-3
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1884 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.service.spring/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.service.spring/pom.xml
@@ -157,6 +157,11 @@
             <type>properties</type>
             <scope>${dependency.scope}</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.core.infrastructure.configuration.provider</artifactId>
+            <scope>${dependency.scope}</scope>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
