--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.integration.jpa/pom.xml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.integration.jpa/pom.xml
@@ -122,6 +122,19 @@
             <version>${core.version}</version>
             <scope>${dependency.scope}</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.core.infrastructure.configuration</artifactId>
+            <version>${core.version}</version>
+            <type>properties</type>
+            <scope>${dependency.scope}</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.core.infrastructure.configuration.provider</artifactId>
+            <version>${core.version}</version>
+            <scope>${dependency.scope}</scope>
+        </dependency>
 
         <!-- Project dependencies -->
         <dependency>
