--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.configuration/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.configuration/pom.xml
@@ -30,13 +30,28 @@
         <version>0.1.1-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.core.infrastructure.configuration</artifactId>
-    <packaging>pom</packaging>
+    <packaging>properties</packaging>
     <name>${project.artifactId}</name>
     <properties>
         <moduleDir>../../..</moduleDir>
     </properties>
     <build>
+        <resources>
+            <resource>
+                <directory>src</directory>
+            </resource>
+        </resources>
         <plugins>
+            <!-- Used to upload as properties artifact to a release repository -->
+            <plugin>
+                <groupId>org.openwms.plugins</groupId>
+                <artifactId>maven-properties-plugin</artifactId>
+                <version>1.0.1</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <path>${project.basedir}/target/${project.artifactId}.properties</path>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
@@ -53,47 +68,6 @@
                                     <directory>${project.basedir}/src</directory>
                                 </resource>
                             </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-install-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>install-library</id>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>install-file</goal>
-                        </goals>
-                        <configuration>
-                            <groupId>org.openwms</groupId>
-                            <artifactId>org.openwms.core.infrastructure.configuration</artifactId>
-                            <version>${project.version}</version>
-                            <packaging>properties</packaging>
-                            <file>${project.basedir}/src/org.openwms.core.infrastructure.configuration.properties</file>
-                            <createChecksum>true</createChecksum>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>deploy-library</id>
-                        <phase>deploy</phase>
-                        <goals>
-                            <goal>deploy-file</goal>
-                        </goals>
-                        <configuration>
-                            <repositoryId>repo.sourceforge.net</repositoryId>
-                            <url>${distribution.repo.serverProtocol}://${distribution.repo.snapshot.serverUrl.rootPath}</url>
-                            <groupId>org.openwms</groupId>
-                            <artifactId>org.openwms.core.infrastructure.configuration</artifactId>
-                            <version>${project.version}</version>
-                            <packaging>properties</packaging>
-                            <file>${project.basedir}/src/org.openwms.core.infrastructure.configuration.properties</file>
                         </configuration>
                     </execution>
                 </executions>
