--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.oracle/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.oracle/pom.xml
@@ -95,5 +95,10 @@
             <type>properties</type>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.core.infrastructure.configuration.provider</artifactId>
+            <scope>${dependency.scope}</scope>
+        </dependency>
     </dependencies>
 </project>
