--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.integration.jpa/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.integration.jpa/pom.xml
@@ -125,6 +125,11 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.core.infrastructure.configuration.provider</artifactId>
+            <scope>${dependency.scope}</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.test</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
