--- a/org.openwms/trunk/org.openwms.tms/org.openwms.tms.integration.jpa/pom.xml
+++ b/org.openwms/trunk/org.openwms.tms/org.openwms.tms.integration.jpa/pom.xml
@@ -114,12 +114,27 @@
             <version>${core.version}</version>
             <scope>${dependency.scope}</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.core.infrastructure.configuration</artifactId>
+            <version>${core.version}</version>
+            <type>properties</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.core.infrastructure.configuration.provider</artifactId>
+            <version>${core.version}</version>
+            <scope>${dependency.scope}</scope>
+        </dependency>
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>org.openwms.common.domain</artifactId>
             <version>${common.version}</version>
             <scope>${dependency.scope}</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>org.openwms.tms.domain</artifactId>
