--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.domain.as/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.domain.as/pom.xml
@@ -57,6 +57,7 @@
 				<groupId>org.sonatype.flexmojos</groupId>
 				<artifactId>flexmojos-maven-plugin</artifactId>
 				<extensions>true</extensions>
+				<!-- version>4.2-beta</version-->
 				<executions>
 					<execution>
 						<goals>
@@ -87,8 +88,15 @@
 				<configuration>
 					<resourceBundlePath>${project.basedir}/src/main/resources</resourceBundlePath>
 					<generatorToUse>graniteds2</generatorToUse>
+					<!-- generatorToUse>graniteds23</generatorToUse-->
 					<outputDirectory>${project.basedir}/src/main/flex</outputDirectory>
 					<outputEnumToBaseOutputDirectory>true</outputEnumToBaseOutputDirectory>
+					<extraOptions>
+					   <!-- This does currently not work:change generator to 23 and plugin version to 4.2-beta -->
+					    <externalizeLong>true</externalizeLong>
+                        <externalizeBigInteger>true</externalizeBigInteger>
+                        <externalizeBigDecimal>true</externalizeBigDecimal>
+					</extraOptions>
 					<beanTemplate>
 						<template>${project.basedir}/etc/2.0.0.GA/beanBase.gsp</template>
 						<template>${project.basedir}/etc/2.0.0.GA/bean.gsp</template>
