IN PROGRESS - issue OPENWMS-2: Create JEE compliant WAR module https://openwms.atlassian.net/browse/OPENWMS-2
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1899 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.integration.eclipselink/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.integration.eclipselink/pom.xml
@@ -68,6 +68,7 @@
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence-library</artifactId>
+            <version>1.0.0</version>
             <type>libd</type>
             <scope>${dependency.scope}</scope>
         </dependency>
