--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/.project
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/.project
@@ -15,7 +15,14 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>com.adobe.flexbuilder.project.flexlibnature</nature>
+		<nature>com.adobe.flexbuilder.project.flexnature</nature>
 		<nature>com.adobe.flexbuilder.project.actionscriptnature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>bin-debug</name>
+			<type>2</type>
+			<location>/data/tomcat/apache-tomcat-7.0.22/webapps/org.openwms.client.flex.wrapper</location>
+		</link>
+	</linkedResources>
 </projectDescription>
