IN PROGRESS - issue OPENWMS-2: Create JEE compliant WAR module https://openwms.atlassian.net/browse/OPENWMS-2
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1903 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.tms/org.openwms.tms.flex.module/.project
+++ b/org.openwms/trunk/org.openwms.tms/org.openwms.tms.flex.module/.project
@@ -4,15 +4,22 @@
 	<comment></comment>
 	<projects>
 	</projects>
-    <buildSpec>
-        <buildCommand>
-            <name>com.adobe.flexbuilder.project.flexbuilder</name>
-            <arguments>
-            </arguments>
-        </buildCommand>
-    </buildSpec>
-    <natures>
-        <nature>com.adobe.flexbuilder.project.flexlibnature</nature>
-        <nature>com.adobe.flexbuilder.project.actionscriptnature</nature>
-    </natures>
+	<buildSpec>
+		<buildCommand>
+			<name>com.adobe.flexbuilder.project.flexbuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+	</buildSpec>
+	<natures>
+		<nature>com.adobe.flexbuilder.project.flexnature</nature>
+		<nature>com.adobe.flexbuilder.project.actionscriptnature</nature>
+	</natures>
+	<linkedResources>
+		<link>
+			<name>bin-debug</name>
+			<type>2</type>
+			<location>/data/tomcat/apache-tomcat-7.0.22/webapps/org.openwms.client.flex.wrapper</location>
+		</link>
+	</linkedResources>
 </projectDescription>
