--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/.project
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/.project
@@ -22,4 +22,11 @@
 		<nature>com.adobe.flexbuilder.project.flexnature</nature>
 		<nature>com.adobe.flexbuilder.project.actionscriptnature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>bin-debug</name>
+			<type>2</type>
+			<location>/data/tomcat/apache-tomcat-7.0.22/webapps/org.openwms.client.flex.wrapper</location>
+		</link>
+	</linkedResources>
 </projectDescription>
