IN PROGRESS - issue OPENWMS-2: Create JEE compliant WAR module https://openwms.atlassian.net/browse/OPENWMS-2
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1913 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -404,7 +404,7 @@
                             <linksource>true</linksource>
                             <overview>${basedir}/overview.html</overview>
                             <source>${project.build.sourceCompilerLevel}</source>
-                            <stylesheetfile>${basedir}/src/site/css/openwms-jdoc.css</stylesheetfile>
+                            <stylesheetfile>${moduleDir}/src/site/css/openwms-jdoc.css</stylesheetfile>
                             <verbose>true</verbose>
                         </configuration>
                     </plugin>
@@ -644,7 +644,7 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
-                        <debug>false</debug>
+                        <debug>true</debug>
                         <optimize>true</optimize>
                         <fork>true</fork>
                         <source>${maven.compile.sourceLevel}</source>
