accross all modules

--- a/org.openwms.common/org.openwms.common.domain.as/pom.xml
+++ b/org.openwms.common/org.openwms.common.domain.as/pom.xml
@@ -60,6 +60,7 @@
 				<extensions>true</extensions>
 				<executions>
 					<execution>
+					    <phase>generate-sources</phase>
 						<goals>
 							<goal>generate</goal>
 						</goals>
