--- a/org.openwms.app/org.openwms.client.flex.wrapper/src/main/webapp/WEB-INF/web.xml
+++ b/org.openwms.app/org.openwms.client.flex.wrapper/src/main/webapp/WEB-INF/web.xml
@@ -41,6 +41,10 @@
       <param-name>spring.profiles.active</param-name>
       <param-value>noOSGI</param-value>
     </context-param>
+    <context-param>
+        <param-name>contextInitializerClasses</param-name>
+        <param-value>org.openwms.core.service.spring.startup.ApplicationInitializer</param-value>
+    </context-param>
     
     <!-- Granite config context listener -->
 	<listener>
