--- a/org.openwms.core/org.openwms.core.infrastructure.configuration.provider/src/main/resources/org.openwms.core.infrastructure.configuration.properties
+++ b/org.openwms.core/org.openwms.core.infrastructure.configuration.provider/src/main/resources/org.openwms.core.infrastructure.configuration.properties
@@ -25,15 +25,24 @@
 #application.initial.properties=file:initial-preferences.xml
 
 # JDBC options, used by the DataSource bean
-jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql:OPENWMS
 jdbc.username=OPENWMS
 jdbc.password=OPENWMS
-jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
-jdbc.database=POSTGRESQL
-jdbc.properties=hibernate.connection.compatible=7.1
-#jdbc.dialect=org.hibernate.dialect.HSQLDialect
 jdbc.persistenceUnit=OpenWMS-test-durable
+
+# PostgreSQL settings
+#jdbc.driverClassName=org.postgresql.Driver
+#jdbc.url=jdbc:postgresql:OPENWMS
+#jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
+#jdbc.database=POSTGRESQL
+#jdbc.properties=hibernate.connection.compatible=7.1
+#jdbc.dialect=org.hibernate.dialect.HSQLDialect
+
+# MySQL settings
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://ec2-23-21-211-172.compute-1.amazonaws.com:3306/OPENWMS
+jdbc.dialect=org.hibernate.dialect.MySQL5Dialect
+jdbc.database=MYSQL
+jdbc.properties=
 
 # System user credentials
 system.user=openwms
