--- a/org.openwms.tms/org.openwms.tms.domain.as/pom.xml
+++ b/org.openwms.tms/org.openwms.tms.domain.as/pom.xml
@@ -47,6 +47,7 @@
 				<extensions>true</extensions>
 				<executions>
 					<execution>
+					    <phase>generate-sources</phase>
 						<goals>
 							<goal>generate</goal>
 						</goals>
