--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,10 @@
     <url>http://www.openwms.org</url>
     <inceptionYear>2005</inceptionYear>
 
+    <prerequisites>
+        <maven>2.2.1</maven>
+    </prerequisites>
+
     <issueManagement>
         <system>JIRA</system>
         <url>https://openwms.atlassian.net</url>
@@ -522,7 +526,7 @@
     <properties>
         <moduleDir>.</moduleDir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jdkVersion>1.6</jdkVersion>
+        <jdkVersion>1.7</jdkVersion>
         <maven.compile.targetLevel>${jdkVersion}</maven.compile.targetLevel>
         <maven.compile.sourceLevel>${jdkVersion}</maven.compile.sourceLevel>
 
@@ -543,6 +547,7 @@
         <org.hsqldb.version>2.2.8</org.hsqldb.version>
         <org.postgresql.jdbc4.version>8.3.604</org.postgresql.jdbc4.version>
         <slf4j.version>1.5.10</slf4j.version>
+        <spring.integration.version>2.2.0.RELEASE</spring.integration.version>
         <spring.osgi.version>1.2.1</spring.osgi.version>
         <spring.security.version>3.1.3.RELEASE</spring.security.version>
         <spring.version>3.1.0.RELEASE</spring.version>
@@ -1215,6 +1220,11 @@
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
                 <version>1.3.166</version>
+            </dependency>
+            <dependency>
+                <groupId>com.mysql.jdbc</groupId>
+                <artifactId>com.springsource.com.mysql.jdbc</artifactId>
+                <version>5.1.6</version>
             </dependency>
             <dependency>
                 <groupId>org.openwms</groupId>
