default database is postgres

--- a/org.openwms.core/org.openwms.core.infrastructure.configuration.provider/src/main/resources/org.openwms.core.infrastructure.configuration.properties
+++ b/org.openwms.core/org.openwms.core.infrastructure.configuration.provider/src/main/resources/org.openwms.core.infrastructure.configuration.properties
@@ -30,19 +30,19 @@ jdbc.password=OPENWMS
 jdbc.persistenceUnit=OpenWMS-test-durable
 
 # PostgreSQL settings
-#jdbc.driverClassName=org.postgresql.Driver
-#jdbc.url=jdbc:postgresql:OPENWMS
-#jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
-#jdbc.database=POSTGRESQL
-#jdbc.properties=hibernate.connection.compatible=7.1
-#jdbc.dialect=org.hibernate.dialect.HSQLDialect
+jdbc.driverClassName=org.postgresql.Driver
+jdbc.url=jdbc:postgresql:OPENWMS
+jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
+jdbc.database=POSTGRESQL
+jdbc.properties=hibernate.connection.compatible=7.1
+jdbc.dialect=org.hibernate.dialect.HSQLDialect
 
 # MySQL settings
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://ec2-23-21-211-172.compute-1.amazonaws.com:3306/OPENWMS
-jdbc.dialect=org.hibernate.dialect.MySQL5Dialect
-jdbc.database=MYSQL
-jdbc.properties=
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://ec2-23-21-211-172.compute-1.amazonaws.com:3306/OPENWMS
+#jdbc.dialect=org.hibernate.dialect.MySQL5Dialect
+#jdbc.database=MYSQL
+#jdbc.properties=
 
 # System user credentials
 system.user=openwms
