--- a/org.openwms.core/org.openwms.core.infrastructure.configuration.provider/src/main/resources/org.openwms.core.infrastructure.configuration.properties
+++ b/org.openwms.core/org.openwms.core.infrastructure.configuration.provider/src/main/resources/org.openwms.core.infrastructure.configuration.properties
@@ -32,10 +32,16 @@ jdbc.persistenceUnit=OpenWMS-test-durable
 # PostgreSQL settings
 jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql:OPENWMS
-jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
 jdbc.database=POSTGRESQL
-jdbc.properties=hibernate.connection.compatible=7.1
-jdbc.dialect=org.hibernate.dialect.HSQLDialect
+jdbc.properties="hibernate.connection.compatible=7.1 hibernate.hbm2ddl.auto=update hibernate.cache.use_query_cache=false hibernate.format_sql=true hibernate.show_sql=true"
+jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# HSQL settings
+#jdbc.driverClassName=org.hsqldb.jdbcDriver
+#jdbc.url=jdbc:hsqldb:mem:OPENWMS
+#jdbc.database=HSQL
+#jdbc.properties=hibernate.hbm2ddl.auto=create hibernate.cache.use_query_cache=false hibernate.format_sql=true hibernate.show_sql=true
+#jdbc.dialect=org.hibernate.dialect.HSQLDialect
 
 # MySQL settings
 #jdbc.driverClassName=com.mysql.jdbc.Driver
