--- a/org.openwms.core/org.openwms.core.infrastructure.configuration/src/org.openwms.core.infrastructure.configuration.properties
+++ b/org.openwms.core/org.openwms.core.infrastructure.configuration/src/org.openwms.core.infrastructure.configuration.properties
@@ -32,7 +32,7 @@ jdbc.password=OPENWMS
 jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
 jdbc.database=POSTGRESQL
 jdbc.properties=hibernate.connection.compatible=7.1
-#jdbc.dialect=org.hibernate.dialect.HSQLDialect
+#jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
 jdbc.persistenceUnit=OpenWMS-test-durable
 
 # System user credentials
