--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,10 @@ Desktop.ini
 .Spotlight-V100
 .Trashes
  
+######################
+# IDEA
+######################
+*.iml
  
 ######################
 # Eclipse
