--- a/org.openwms.tms/org.openwms.tms.flex.module/.project
+++ b/org.openwms.tms/org.openwms.tms.flex.module/.project
@@ -10,14 +10,8 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.m2e.core.maven2Builder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 		<nature>com.adobe.flexbuilder.project.flexnature</nature>
 		<nature>com.adobe.flexbuilder.project.actionscriptnature</nature>
 	</natures>
@@ -25,7 +19,7 @@
 		<link>
 			<name>bin-debug</name>
 			<type>2</type>
-			<location>/data/tomcat/apache-tomcat-7.0.22/webapps/org.openwms.client.flex.wrapper</location>
+			<location>/data/servers/apache-tomcat-7.0.22/server1/webapps/org.openwms.client.flex.wrapper</location>
 		</link>
 	</linkedResources>
 </projectDescription>
